--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,7 +8,7 @@
     <title>Novia - Admin</title>
     <link rel="stylesheet" href="css/style.css">
 
-
+    <link rel="icon" type="image/png" href="image/logo.png"/>
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
