--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -94,6 +94,7 @@
                                 <th scope="col">User Id</th>
                                 <th scope="col">Importance</th>
                                 <th scope="col">Report</th>
+                                <th scope="col">Location</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -104,6 +105,7 @@
                                 <td><%- data.user_id %></td>
                                 <td><%- data.importance %></td>
                                 <td><%- data.report %></td>
+                                <td><%- data.location %></td>
                             </tr>
                             <% }); %>
                         </tbody>
